<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/lay_main_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/lay_main_head"
        android:layout_width="match_parent"
        android:text="@string/app_name"/>

    <LinearLayout
        style="@style/lay_main_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            style="@style/lay_main_btn"
            android:id="@+id/lay_main_btn_find"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_search"
            app:icon="@drawable/ic_search"/>
        <Button
            style="@style/lay_main_btn"
            android:id="@+id/lay_main_btn_mediateka"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_mediateka"
            app:icon="@drawable/ic_mediateka"/>
        <Button
            style="@style/lay_main_btn"
            android:id="@+id/lay_main_btn_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_settings"
            app:icon="@drawable/ic_settings"/>
    </LinearLayout>
</LinearLayout>