<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg">

    <!-- Заголовок страницы -->
    <LinearLayout
        style = "@style/lays_back"
        android:id="@+id/lay_settings_layout_back">

        <ImageView
            style = "@style/lays_back_img"
            android:contentDescription="@string/lay_settings_head"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            style = "@style/lays_back_text"
            android:text="@string/lay_settings_head"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Меню -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Темная тема -->
            <androidx.appcompat.widget.SwitchCompat
                style = "@style/lay_settings_switch"
                android:layout_width="match_parent"
                android:text = "@string/lay_settings_op_darktheme"/>

            <TextView
                style = "@style/lay_settings_text"
                android:id="@+id/lay_settings_op_share"
                android:layout_width="match_parent"
                android:text="@string/lay_settings_op_share"
                app:drawableEndCompat="@drawable/ic_share"/>

            <TextView
                style = "@style/lay_settings_text"
                android:id="@+id/lay_settings_op_support"
                android:layout_width="match_parent"
                android:text="@string/lay_settings_op_support"
                app:drawableEndCompat="@drawable/ic_support"/>

            <TextView
                style = "@style/lay_settings_text"
                android:id="@+id/lay_settings_op_user_agreement"
                android:layout_width="match_parent"
                android:text="@string/lay_settings_op_user_agreement"
                android:textColor="?attr/colorOnPrimary"
                app:drawableEndCompat="@drawable/ic_arrow_forward"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>